# Cryptography

./: README.md
evm_partial_implementation/: Cargo.toml  README.md
evm_partial_implementation/src/: lib.rs  opcodes.rs  types.rs
evm_partial_implementation/tests/: execute.rs
fri/: Cargo.toml  README.md
fri/src/: lib.rs  merkletree.rs  transcript.rs
shamirs_secret_sharing/: README.md
shamirs_secret_sharing/benches/: benches.rs
shamirs_secret_sharing/src/: lib.rs
