[package]
name = "fri"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core arkworks libraries
ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }

# Cryptographic dependencies
rand = { version = "0.8.5", features = ["std", "std_rng"] }
sha3 = "0.10.8"
merlin = "3.0.0"

[dev-dependencies]
ark-bn254 = { version = "0.5.0", default-features = false }
ark-ed-on-bn254 = { version = "0.5.0", default-features = true }
